# tech-explanation-service-langchain

./: .gitattributes  .gitignore  .space_config.yml  DEPLOYMENT.md  HF_SPACES_SETUP.md  HF_SPACES_TROUBLESHOOTING.md  HISTORY_FEATURES.md  OAUTH_SETUP.md  OAUTH_TESTING.md  README.md  README_LOCAL.md  TESTING_HISTORY.md  UI_LOGO_INTEGRATION.md  history.json  pyproject.toml  pytest.ini  rag_documents.json  requirements.txt  spaces_app.py  test_rag.md
app/: fastapi_app.py  main.py
app/auth/: __init__.py  hf_auth.py  oauth_providers.py  session.py
app/chains/: rag_explanation_chain.py  tech_explanation_chain.py
app/db/: __init__.py  connection.py  models.py  repository.py  schema.sql
app/prompts/: tech_explanation_prompt.py
app/services/: __init__.py  llm_factory.py  tech_explanation_service.py  tech_explanation_service_facade.py
assets/: README.md  view_logo.html
chroma_db/: chroma.sqlite3
notebooks/: exploration.ipynb
scripts/: generate_logo_png.py
tech_explanation_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  test_auth.py  test_chain.py  test_explanation_service.py  test_history_services.py  test_input_validator.py  test_quota_aware_llm.py  test_quota_db.py  test_quota_integration.py  test_rag_service.py  test_rate_limiter.py  test_service_and_prompt.py  test_shared_services.py  test_tech_explanation_chain.py  test_tech_explanation_service.py  test_token_counter.py
ui/: README.md  gradio_app.py
ui/callbacks/: __init__.py  auth_callbacks.py  download_callbacks.py  explanation_callbacks.py  explanation_callbacks_quota.py  (+5 more)
(+39 files in other folders)
